# pycniospores

./: Cargo.toml  README.md  crayon-perf.md  performance-tests.md
src/: bucket.rs  buckets.md  configuration.rs  generators.rs  main.rs  movement_calculator.rs  simulation.rs  spore.rs  spore_mover.rs  vector.rs
