[package]
name = "pycniospores"
version = "0.1.0"
authors = ["William Mclt <william.mauclet+gitlab@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://gitlab.com/wmclt/pycniospores"
description = "A particles-based simulation tool to research the possibility of 2D virtual abiogenesis."
keywords = ["simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.6.1"
rand = "0.8.4"
rayon = "1.5.1"
jemallocator = "0.3.2"
clap = "2.33.3"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

# [profile.dev]
# opt-level = 1
# overflow-checks = false