[package]
name = "pycniospores"
version = "0.1.0"
authors = ["William Mclt <william.mauclet+gitlab@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://gitlab.com/wmclt/pycniospores"
description = "A particles-based simulation tool to research the possibility of 2D virtual abiogenesis."
keywords = ["simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.9.3"
rand = "0.9.0"
rayon = "1.10.0"
jemallocator = "0.5.4"
clap = "2.34.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

# [profile.dev]
# opt-level = 1
# overflow-checks = false
